# zero2prd

./: Cargo.toml  configuration.yaml
.github/workflows/: general.yml
migrations/: 20230501122744_create_subscriptions_table.sql
scripts/: init_db.sh  prout.sh
src/: lib.rs  main.rs
src/configuration/: mod.rs
src/routes/: subscriptions.rs
src/startup/: mod.rs
tests/: health_check.rs
