[package]
name = "zero2prd"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
[dependencies]
axum = "0.6.15"
http = "0.2.9"
hyper = {version = "0.14.26", features=["full"]}
tokio = {version = "1.27.0", features=["full"]}
tower = "0.4.13"


[dev-dependencies]
reqwest = "0.11"
