[package]
name = "zero2prd"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
[dependencies]
axum = "0.6.15"
http = "0.2.9"
hyper = {version = "0.14.26", features=["full"]}
tokio = {version = "1.27.0", features=["full"]}
tower = {version = "0.4.13"}
serde = { version = "1.0", features = ["derive"]}
config = "0.13"
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.4", features = ["trace", "request-id", "util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
secrecy = { version = "0.8.0", features = ["serde"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1.17.1"
